// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tweet.vue button click 1`] = `
<div>
  <h1>みわ 泰平 三輪</h1> <strong>followers:</strong> 1
  <button>follow</button>
</div>
`;

exports[`Tweet.vue renders props.msg when passed 1`] = `
<div>
  <h1>みわ 泰平 三輪</h1> <strong>followers:</strong> 0
  <button>follow</button>
</div>
`;
